--- a/next/manifest.json
+++ b/next/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Teleflora",
   "short_name": "Teleflora",
-  "start_url": ".",
+  "start_url": "PDP.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2",
